# hft-bot

./: CMakeLists.txt
scripts/dev/: prereqs.sh
